--- a/6元祖.md
+++ b/6元祖.md
@@ -114,3 +114,122 @@ let a3: TupleEl = new Date();
 ```
 
 上面示例中，`Tuple[number]` 表示元组 `Tuple` 的所有数值索引的成员类型，所以返回 `string|number|Date`，即这个类型是三种值的联合类型。
+
+## 2. 只读元组
+
+元组也可以是只读的，不允许修改，有两种写法。
+
+```typescript
+// 写法一
+type t = readonly [number, string]
+
+// 写法二
+type t = Readonly<[number, string]>
+```
+
+跟数组一样，只读元组是元组的父类型。所以，元组可以替代只读元组，而只读元组不能替代元组。
+
+```typescript
+type t1 = readonly [number, number];
+type t2 = [number, number];
+
+let x:t2 = [1, 2];
+let y:t1 = x; // 正确
+
+x = y; // 报错：The type 't1' is 'readonly' and cannot be assigned to the mutable type 't2'.
+```
+
+由于只读元组不能替代元组，所以会产生一些令人困惑的报错。
+
+```typescript
+function distanceFromOrigin([x, y]:[number, number]) {
+  return Math.sqrt(x**2 + y**2);
+}
+
+let point = [3, 4] as const;
+
+distanceFromOrigin(point); // 报错
+```
+
+上面示例中，函数distanceFromOrigin()的参数是一个元组，传入只读元组就会报错，因为只读元组不能替代元组。
+
+上例中[3, 4] as const的写法，在上一章讲到，生成的是只读数组，其实生成的同时也是只读元组。因为它生成的实际上是一个只读的“值类型”readonly [3, 4]，把它解读成只读数组或只读元组都可以。
+
+上面示例报错的解决方法，就是使用类型断言，在最后一行将传入的参数断言为普通元组。
+
+```typescript
+distanceFromOrigin(
+  point as [number, number]
+)
+```
+
+## 3. 成员数量的推断
+
+如果没有可选成员和扩展运算符，TypeScript 会推断出元组的成员数量（即元组长度）。
+
+```typescript
+function f(point: [number, number]) {
+  if (point.length === 3) {  // 报错：This comparison appears to be unintentional because the types '2' and '3' have no overlap.
+    // ...
+  }
+}
+```
+上面示例会报错，原因是 TypeScript 发现元组 `point` 的长度是 2，不可能等于 3，这个判断无意义。
+
+如果包含了可选成员，TypeScript 会推断出可能的成员数量。
+
+```typescript
+function f(
+  point:[number, number?, number?]
+) {
+  if (point.length === 4) {  // 报错： This comparison appears to be unintentional because the types '1 | 2 | 3' and '4' have no overlap.这种比较似乎是无意的，因为类型'1 | 2 | 3'和'4'没有重叠。
+    // ...
+  }
+}
+```
+
+如果使用了扩展运算符，TypeScript 就无法推断出成员数量。
+
+```typescript
+const myTuple:[...string[]] = ['a', 'b', 'c'];
+if (myTuple.length === 4) { // 正确
+  // ...
+}
+```
+
+上面示例中，myTuple只有三个成员，但是 TypeScript 推断不出它的成员数量，因为它的类型用到了扩展运算符，TypeScript 把myTuple当成数组看待，而数组的成员数量是不确定的。
+
+一旦扩展运算符使得元组的成员数量无法推断，TypeScript 内部就会把该元组当成数组处理。
+
+## 4. 扩展运算符与成员数量
+
+扩展运算符（...）将数组（不是元组）转换成一个逗号分隔的序列，这时 TypeScript 会认为这个序列的成员数量是不确定的，因为数组的成员数量是不确定的。
+
+这导致如果函数调用时，使用扩展运算符传入函数参数，可能发生参数数量与数组长度不匹配的报错。
+
+```typescript
+const arr = [1, 2];
+function add(x:number, y:number){
+  // ...
+}
+add(...arr) // 报错：A spread argument must either have a tuple type or be passed to a rest parameter.扩展参数必须具有元组类型，或者传递给rest形参。
+```
+上面示例会报错，原因是函数add()只能接受两个参数，但是传入的是 `...arr`，TypeScript 认为转换后的参数个数是不确定的。
+
+需要改成下面这样：
+
+```typescript
+const t: [number, number] = [1, 2];
+function add(x: number, y: number) {
+  // ...
+}
+add(...t); // 正确
+```
+
+另一种写法是使用as const断言。
+
+```typescript
+const arr = [1, 2] as const;
+```
+
+上面这种写法也可以，因为 TypeScript 会认为 `arr` 的类型是 `readonly [1, 2]`，这是一个只读的值类型，可以当作数组，也可以当作元组。
