--- a/1简介.md
+++ b/1简介.md
@@ -18,13 +18,13 @@ TypeScript 是 JavaScript 的超集，是微软公司开发。主要功能是为
 
 ```typescript
 let obj = { message: '' };
-console.log(obj.messege); // 报错：Property 'messege' does not exist on type '{ message: string; }'. Did you mean 'message'?
+console.log(obj.messege); // Property 'messege' does not exist on type '{ message: string; }'. Did you mean 'message'?
 ```
 
 ```typescript
 const a = 0;
 const b = true;
-const result = a + b; // 报错：Operator '+' cannot be applied to types 'number' and 'boolean'.
+const result = a + b; // Operator '+' cannot be applied to types 'number' and 'boolean'.
 ```
 
 ```typescript
@@ -32,7 +32,7 @@ function hello() {
   return 'hello world';
 }
 
-hello().find('hello'); // 报错：Property 'find' does not exist on type 'string'.
+hello().find('hello'); // Property 'find' does not exist on type 'string'.
 ```
 
 （3）更好的 IDE 支持，做到语法提示和自动补全。
