--- a/2基本用法.md
+++ b/2基本用法.md
@@ -6,7 +6,7 @@
 
 ```typescript
 let x:number;
-console.log(x); // 报错：在赋值前使用了变量“x”。
+console.log(x); // 在赋值前使用了变量“x”。
 ```
 
 ## 2. 类型推断
@@ -68,7 +68,7 @@ $ ts-node
 >
 ```
 
-上面示例中，单独运行ts-node命令，会给出一个大于号，这就是 TypeScript 的 REPL 运行环境，可以逐行输入代码运行。
+上例中，单独运行ts-node命令，会给出一个大于号，这就是 TypeScript 的 REPL 运行环境，可以逐行输入代码运行。
 
 ```bash
 $ ts-node
@@ -78,7 +78,7 @@ $ ts-node
 > 
 ```
 
-上面示例中，在 TypeScript 命令行 REPL 环境中，先输入一个函数 `twice`，然后调用该函数，就会得到结果。
+上例中，在 TypeScript 命令行 REPL 环境中，先输入一个函数 `twice`，然后调用该函数，就会得到结果。
 
 要退出这个 REPL 环境，可以按下 `Ctrl + d`，或者输入 `.exit`。
 
