--- a/6元组.md
+++ b/6元组.md
@@ -25,14 +25,14 @@ let a:[number] = [1];
 let a = [1, true];
 ```
 
-上面示例中，变量 `a` 的值其实是一个元组，但是 TypeScript 会将其推断为一个联合类型的数组，即 `a` 的类型为 `(number | boolean)[]`。
+上例中，变量 `a` 的值其实是一个元组，但是 TypeScript 会将其推断为一个联合类型的数组，即 `a` 的类型为 `(number | boolean)[]`。
 
 元组成员的类型可以添加问号后缀（?），表示该成员是可选的。
 
 ```typescript
 let a:[number, number?] = [1];
 ```
-上面示例中，元组 `a` 的第二个成员是可选的，可以省略。
+上例中，元组 `a` 的第二个成员是可选的，可以省略。
 
 **问号只能用于元组的尾部成员，也就是说，所有可选成员必须在必选成员之后。**
 
@@ -44,17 +44,17 @@ type myTuple = [
   string?
 ];
 ```
-上面示例中，元组myTuple的最后两个成员是可选的。也就是说，它的成员数量可能有两个、三个和四个。
+上例中，元组myTuple的最后两个成员是可选的。也就是说，它的成员数量可能有两个、三个和四个。
 
 由于需要声明每个成员的类型，所以大多数情况下，元组的成员数量是有限的，从类型声明就可以明确知道，元组包含多少个成员，越界的成员会报错。
 
 ```typescript
 let x:[string, string] = ['a', 'b'];
 
-x[2] = 'c'; // 报错：Tuple type '[string, string]' of length '2' has no element at index '2'.
+x[2] = 'c'; // Tuple type '[string, string]' of length '2' has no element at index '2'.
 ```
 
-上面示例中，变量 `x` 是一个只有两个成员的元组，如果对第三个成员赋值就报错了。
+上例中，变量 `x` 是一个只有两个成员的元组，如果对第三个成员赋值就报错了。
 
 **使用扩展运算符（...），可以表示不限成员数量的元组。**
 
@@ -68,12 +68,12 @@ const a:NamedNums = ['A', 1, 2];
 const b:NamedNums = ['B', 1, 2, 3];
 ```
 
-上面示例中，元组类型 `NamedNums` 的第一个成员是字符串，后面的成员使用扩展运算符来展开一个数组，从而实现了不定数量的成员。
+上例中，元组类型 `NamedNums` 的第一个成员是字符串，后面的成员使用扩展运算符来展开一个数组，从而实现了不定数量的成员。
 
 扩展运算符用在元组的任意位置都可以，但是它后面只能是数组或元组。
 
 ```typescript
-// 上面示例中，扩展运算符分别在元组的尾部、中部和头部。
+// 上例中，扩展运算符分别在元组的尾部、中部和头部。
 type t1 = [string, number, ...boolean[]];
 type t2 = [string, ...boolean[], number];
 type t3 = [...boolean[], string, number];
@@ -89,7 +89,7 @@ const t3: t3 = [false, true, '1', 1];
 ```typescript
 type Tuple = [...any[]];
 ```
-上面示例中，元组Tuple可以放置任意数量和类型的成员。但是这样写，也就失去了使用元组和 TypeScript 的意义。
+上例中，元组Tuple可以放置任意数量和类型的成员。但是这样写，也就失去了使用元组和 TypeScript 的意义。
 
 元组可以通过方括号，读取成员类型。
 
@@ -100,7 +100,7 @@ type Name = Tuple[0]; // string
 let age: Age = 18;
 let nickName: Name = 'lisi'; 
 ```
-上面示例中，`Tuple[1]` 返回 `1` 号位置的成员类型 `number`，`Tuple[0]` 返回 `0` 号位置的成员类型 `string`。
+上例中，`Tuple[1]` 返回 `1` 号位置的成员类型 `number`，`Tuple[0]` 返回 `0` 号位置的成员类型 `string`。
 
 由于元组的成员都是数值索引，即索引类型都是 `number`，所以可以像下面这样读取。
 
@@ -113,7 +113,7 @@ let a2: TupleEl = 1;
 let a3: TupleEl = new Date();
 ```
 
-上面示例中，`Tuple[number]` 表示元组 `Tuple` 的所有数值索引的成员类型，所以返回 `string|number|Date`，即这个类型是三种值的联合类型。
+上例中，`Tuple[number]` 表示元组 `Tuple` 的所有数值索引的成员类型，所以返回 `string|number|Date`，即这个类型是三种值的联合类型。
 
 ## 2. 只读元组
 
@@ -136,7 +136,7 @@ type t2 = [number, number];
 let x:t2 = [1, 2];
 let y:t1 = x; // 正确
 
-x = y; // 报错：The type 't1' is 'readonly' and cannot be assigned to the mutable type 't2'.
+x = y; // The type 't1' is 'readonly' and cannot be assigned to the mutable type 't2'.
 ```
 
 由于只读元组不能替代元组，所以会产生一些令人困惑的报错。
@@ -151,7 +151,7 @@ let point = [3, 4] as const;
 distanceFromOrigin(point); // 报错
 ```
 
-上面示例中，函数distanceFromOrigin()的参数是一个元组，传入只读元组就会报错，因为只读元组不能替代元组。
+上例中，函数distanceFromOrigin()的参数是一个元组，传入只读元组就会报错，因为只读元组不能替代元组。
 
 上例中[3, 4] as const的写法，在上一章讲到，生成的是只读数组，其实生成的同时也是只读元组。因为它生成的实际上是一个只读的“值类型”readonly [3, 4]，把它解读成只读数组或只读元组都可以。
 
@@ -169,7 +169,7 @@ distanceFromOrigin(
 
 ```typescript
 function f(point: [number, number]) {
-  if (point.length === 3) {  // 报错：This comparison appears to be unintentional because the types '2' and '3' have no overlap.
+  if (point.length === 3) {  // This comparison appears to be unintentional because the types '2' and '3' have no overlap.
     // ...
   }
 }
@@ -182,7 +182,7 @@ function f(point: [number, number]) {
 function f(
   point:[number, number?, number?]
 ) {
-  if (point.length === 4) {  // 报错： This comparison appears to be unintentional because the types '1 | 2 | 3' and '4' have no overlap.这种比较似乎是无意的，因为类型'1 | 2 | 3'和'4'没有重叠。
+  if (point.length === 4) {  //  This comparison appears to be unintentional because the types '1 | 2 | 3' and '4' have no overlap.这种比较似乎是无意的，因为类型'1 | 2 | 3'和'4'没有重叠。
     // ...
   }
 }
@@ -197,7 +197,7 @@ if (myTuple.length === 4) { // 正确
 }
 ```
 
-上面示例中，myTuple只有三个成员，但是 TypeScript 推断不出它的成员数量，因为它的类型用到了扩展运算符，TypeScript 把myTuple当成数组看待，而数组的成员数量是不确定的。
+上例中，myTuple只有三个成员，但是 TypeScript 推断不出它的成员数量，因为它的类型用到了扩展运算符，TypeScript 把myTuple当成数组看待，而数组的成员数量是不确定的。
 
 一旦扩展运算符使得元组的成员数量无法推断，TypeScript 内部就会把该元组当成数组处理。
 
@@ -212,7 +212,7 @@ const arr = [1, 2];
 function add(x:number, y:number){
   // ...
 }
-add(...arr) // 报错：A spread argument must either have a tuple type or be passed to a rest parameter.扩展参数必须具有元组类型，或者传递给rest形参。
+add(...arr) // A spread argument must either have a tuple type or be passed to a rest parameter.扩展参数必须具有元组类型，或者传递给rest形参。
 ```
 上面示例会报错，原因是函数add()只能接受两个参数，但是传入的是 `...arr`，TypeScript 认为转换后的参数个数是不确定的。
 
