--- a/21运算符.md
+++ b/21运算符.md
@@ -15,7 +15,7 @@ type MyObj = {
 type Keys = keyof MyObj; // 'foo'|'bar'
 ```
 
-上面示例中，`keyof MyObj` 返回 `MyObj` 的所有键名组成的联合类型，即 `'foo'|'bar'`。
+上例中，`keyof MyObj` 返回 `MyObj` 的所有键名组成的联合类型，即 `'foo'|'bar'`。
 
 ```typescript
 interface T {
@@ -39,7 +39,7 @@ type KeyT = keyof any; // type KeyT = string | number | symbol
 type KeyT = keyof object;  // never
 ```
 
-上面示例中，由于 `object` 类型没有自身的属性，也就没有键名，所以 `keyof object` 返回 `never` 类型。
+上例中，由于 `object` 类型没有自身的属性，也就没有键名，所以 `keyof object` 返回 `never` 类型。
 
 由于 keyof 返回的类型是 `string | number | symbol`，如果有些场合只需要其中的一种类型，那么可以采用交叉类型的写法。
 
@@ -48,13 +48,13 @@ type Capital<T extends string> = Capitalize<T>;
 type MyKeys<Obj extends object> = Capital<keyof Obj>; // 报错
 ```
 
-上面示例中，类型 `Capital` 只接受字符串作为类型参数，传入 `keyof Obj` 会报错，原因是这时的类型参数是 `string|number|symbol` ，跟字符串不兼容。采用下面的交叉类型写法，就不会报错。
+上例中，类型 `Capital` 只接受字符串作为类型参数，传入 `keyof Obj` 会报错，原因是这时的类型参数是 `string|number|symbol` ，跟字符串不兼容。采用下面的交叉类型写法，就不会报错。
 
 ```typescript
 type MyKeys<Obj extends object> = Capital<string & keyof Obj>;
 ```
 
-上面示例中，`string & keyof Obj` 等同于 `string & string | number | symbol` 进行交集运算，最后返回 `string`，因此 `Capital<T extends string>` 就不会报错了。
+上例中，`string & keyof Obj` 等同于 `string & string | number | symbol` 进行交集运算，最后返回 `string`，因此 `Capital<T extends string>` 就不会报错了。
 
 **如果对象属性名采用索引形式，keyof 会返回属性名的索引类型。**
 
@@ -84,7 +84,7 @@ type KeyT = keyof T;
 type Result = keyof ['a', 'b', 'c']; // number | "0" | "1" | "2" | "length" | "pop" | "push" | ···
 ```
 
-上面示例中，keyof 会返回数组的所有键名，包括数字键名和继承的键名。
+上例中，keyof 会返回数组的所有键名，包括数字键名和继承的键名。
 
 **对于联合类型，keyof 返回成员共有的键名。**
 
@@ -120,7 +120,7 @@ type Keys = keyof MyObj;
 type Values = MyObj[Keys]; // type Values9 = string | number，MyObj9[Keys] <=> string | number
 ```
 
-上面示例中，`Keys` 是键名组成的联合类型，而 `MyObj[Keys]` 会取出每个键名对应的键值类型，组成一个新的联合类型，即 `number|string`。
+上例中，`Keys` 是键名组成的联合类型，而 `MyObj[Keys]` 会取出每个键名对应的键值类型，组成一个新的联合类型，即 `number|string`。
 
 ### 1.1. keyof 运算符的用途
 
@@ -156,7 +156,7 @@ function prop<Obj, K extends keyof Obj>(
 }
 ```
 
-上面示例中，`K extends keyof Obj` 表示 `K` 是 `Obj` 的一个属性名，传入其他字符串会报错。返回值类型 `Obj[K]` 就表示 `K` 这个属性值的类型。
+上例中，`K extends keyof Obj` 表示 `K` 是 `Obj` 的一个属性名，传入其他字符串会报错。返回值类型 `Obj[K]` 就表示 `K` 这个属性值的类型。
 
 `keyof` 的另一个用途是用于属性映射，即将一个类型的所有属性逐一映射成其他值。
 
@@ -172,7 +172,7 @@ type MyObj = { foo: number; };
 type NewObj = NewProps<MyObj>;
 ```
 
-上面示例中，类型 `NewProps` 是类型 `Obj` 的映射类型，前者继承了后者的所有属性，但是把所有属性值类型都改成了 `boolean`。
+上例中，类型 `NewProps` 是类型 `Obj` 的映射类型，前者继承了后者的所有属性，但是把所有属性值类型都改成了 `boolean`。
 
 下面的例子是去掉 `readonly` 修饰符。
 
@@ -190,7 +190,7 @@ type MyObj = {
 type NewObj = Mutable<MyObj>;
 ```
 
-上面示例中，`[Prop in keyof Obj]` 是 `Obj` 类型的所有属性名，`-readonly` 表示去除这些属性的只读特性。对应地，还有 `+readonly` 的写法，表示添加只读属性设置。
+上例中，`[Prop in keyof Obj]` 是 `Obj` 类型的所有属性名，`-readonly` 表示去除这些属性的只读特性。对应地，还有 `+readonly` 的写法，表示添加只读属性设置。
 
 下面的例子是让可选属性变成必有的属性。
 
@@ -208,7 +208,7 @@ type MyObj = {
 type NewObj = Concrete<MyObj>;
 ```
 
-上面示例中，`[Prop in keyof Obj]` 后面的 `-?` 表示去除可选属性设置。对应地，还有 `+?` 的写法，表示添加可选属性设置。
+上例中，`[Prop in keyof Obj]` 后面的 `-?` 表示去除可选属性设置。对应地，还有 `+?` 的写法，表示添加可选属性设置。
 
 ## 2. in 运算符
 
@@ -239,7 +239,7 @@ type Foo = {
 };
 ```
 
-上面示例中，[`Prop in U]` 表示依次取出联合类型 `U` 的每一个成员。
+上例中，[`Prop in U]` 表示依次取出联合类型 `U` 的每一个成员。
 
 `[Prop in keyof Obj]` 表示取出对象 `Obj` 的每一个键名。`keyof Obj` 表示取出 `Obj` 对象的所有健名组成的联合类型（假设为 `U`），`Prop in U` 表示取出联合类型的每一个成员类型。
 
@@ -271,7 +271,7 @@ type A = Person[keyof Person];  // type A = string | number | boolean, Person[ke
 **如果访问不存在的属性，会报错。**
 
 ```typescript
-type T = Person['notExisted']; // 报错：Property 'notExisted' does not exist on type 'Person'.
+type T = Person['notExisted']; // Property 'notExisted' does not exist on type 'Person'.
 ```
 
 **方括号运算符的参数也可以是属性名的索引类型。**
@@ -284,7 +284,7 @@ type Obj = {
 type T = Obj[string];
 ```
 
-上面示例中，`Obj` 的属性名是字符串的索引类型，所以可以写成 `Obj[string]`，*代表所有字符串属性名*，返回的就是它们的类型 `number`。
+上例中，`Obj` 的属性名是字符串的索引类型，所以可以写成 `Obj[string]`，*代表所有字符串属性名*，返回的就是它们的类型 `number`。
 
 对于数组，可以使用number作为方括号的参数。
 
@@ -295,13 +295,13 @@ const MyArray = ['a','b','c'];
 type Person = typeof MyArray[number]; // type Person = string, typeof MyArray[number] <=> string
 ```
 
-上面示例中，`MyArray` 是一个数组，它的类型实际上是属性名的数值索引，而 `typeof MyArray[number]` 的 `typeof` 运算优先级高于方括号，所以返回的是所有数值键名的键值类型 `string`。
+上例中，`MyArray` 是一个数组，它的类型实际上是属性名的数值索引，而 `typeof MyArray[number]` 的 `typeof` 运算优先级高于方括号，所以返回的是所有数值键名的键值类型 `string`。
 
 **方括号里面不能有值的运算。**
 
 ```typescript
 const key = 'age'; // key 是值类型，类型为 'age'
-type Age = Person[key]; // 报错：'key' refers to a value, but is being used as a type here. “key”指的是一个值，但在这里被用作类型。
+type Age = Person[key]; // 'key' refers to a value, but is being used as a type here. “key”指的是一个值，但在这里被用作类型。
 type Age = Person[typeof key]; // 正确：typeof key 表示取 key 的类型 'age'
 ```
 
@@ -329,7 +329,7 @@ type T1 = Dog extends Animal ? number : string; // type T1 = number
 type T2 = RegExp extends Animal ? number : string; // type T2 = string
 ```
 
-上面示例中，`Dog` 是 `Animal` 的子类型，所以 `T1` 的类型是 `number`。`RegExp` 不是 `Animal` 的子类型，所以 `T2` 的类型是 `string`。
+上例中，`Dog` 是 `Animal` 的子类型，所以 `T1` 的类型是 `number`。`RegExp` 不是 `Animal` 的子类型，所以 `T2` 的类型是 `string`。
 
 一般来说，调换 `extends` 两侧类型，会返回相反的结果。举例来说，有两个类 `Dog` 和 `Animal`，前者是后者的子类型，那么 `Dog extends Animal` 就为真，而 `Animal extends Dog` 就为伪。
 
@@ -342,7 +342,7 @@ type T2 = RegExp extends Animal ? number : string; // type T2 = string
 (B extends U ? X : Y)
 ```
 
-上面示例中，A|B是一个联合类型，进行条件运算时，相当于A和B分别进行运算符，返回结果组成一个联合类型。
+上例中，A|B是一个联合类型，进行条件运算时，相当于A和B分别进行运算符，返回结果组成一个联合类型。
 
 如果不希望联合类型被条件运算符展开，可以把extends两侧的操作数都放在方括号里面。
 
@@ -398,7 +398,7 @@ type Flatten<Type> =
   Type extends Array<infer Item> ? Item : Type;
 ```
 
-上面示例中，`infer Item` 表示 `Item` 这个参数是 TypeScript 自己推断出来的，不用显式传入，而 `Flatten<Type>` 则表示 `Type` 这个类型参数是外部传入的。`Type extends Array<infer Item>` 则表示，如果参数 `Type` 是一个数组，那么就将该数组的成员类型推断为 `Item`，即 `Item` 是从 `Type` 推断出来的。
+上例中，`infer Item` 表示 `Item` 这个参数是 TypeScript 自己推断出来的，不用显式传入，而 `Flatten<Type>` 则表示 `Type` 这个类型参数是外部传入的。`Type extends Array<infer Item>` 则表示，如果参数 `Type` 是一个数组，那么就将该数组的成员类型推断为 `Item`，即 `Item` 是从 `Type` 推断出来的。
 
 一旦使用 `Infer Item` 定义了 `Item`，后面的代码就可以直接调用 `Item` 了。下面是上例的泛型Flatten<Type>的用法。
 
@@ -410,7 +410,7 @@ type Str = Flatten<string[]>;
 type Num = Flatten<number>;
 ```
 
-上面示例中，第一个例子 `Flatten<string[]>` 传入的类型参数是 `string[]`，可以推断出 `Item` 的类型是 `string`，所以返回的是 `string`。第二个例子 `Flatten<number>` 传入的类型参数是 `number`，它不是数组，所以直接返回自身。
+上例中，第一个例子 `Flatten<string[]>` 传入的类型参数是 `string[]`，可以推断出 `Item` 的类型是 `string`，所以返回的是 `string`。第二个例子 `Flatten<number>` 传入的类型参数是 `number`，它不是数组，所以直接返回自身。
 
 ## 6. is 运算符
 
@@ -426,7 +426,7 @@ function isFish(
 }
 ```
 
-上面示例中，函数 `isFish()` 的返回值类型为 `pet is Fish`，表示如果参数 `pet` 类型为 `Fish`，则返回 `true`，否则返回 `false``。
+上例中，函数 `isFish()` 的返回值类型为 `pet is Fish`，表示如果参数 `pet` 类型为 `Fish`，则返回 `true`，否则返回 `false``。
 
 `is` 运算符总是用于描述函数的返回值类型，写法采用 `parameterName is Type` 的形式，即左侧为当前函数的参数名，右侧为某一种类型。它返回一个布尔值，表示左侧参数是否属于右侧的类型。
 
@@ -454,7 +454,7 @@ if (isCat(x)) {
 }
 ```
 
-上面示例中，函数 `isCat()` 的返回类型是 `a is Cat`，它是一个布尔值。后面的 `if` 语句就用这个返回值进行判断，从而起到类型保护的作用，确保 `x` 是 `Cat` 类型，从而 `x.meow()` 不会报错（假定 `Cat` 类型拥有 `meow()` 方法）。
+上例中，函数 `isCat()` 的返回类型是 `a is Cat`，它是一个布尔值。后面的 `if` 语句就用这个返回值进行判断，从而起到类型保护的作用，确保 `x` 是 `Cat` 类型，从而 `x.meow()` 不会报错（假定 `Cat` 类型拥有 `meow()` 方法）。
 
 `is` 运算符还有一种特殊用法，就是用在类（`class`）的内部，描述类的方法的返回值。
 
@@ -472,7 +472,7 @@ class Student {
 }
 ```
 
-上面示例中，`isStudent()` 方法的返回值类型，取决于该方法内部的 `this` 是否为 `Student` 对象。如果是的，就返回布尔值 `true`，否则返回 `false`。
+上例中，`isStudent()` 方法的返回值类型，取决于该方法内部的 `this` 是否为 `Student` 对象。如果是的，就返回布尔值 `true`，否则返回 `false`。
 
 **`this is T` 这种写法，只能用来描述方法的返回值类型，而不能用来描述属性的类型。**
 
@@ -492,7 +492,7 @@ type Num = 123;
 type Obj = { n : 123 };
 
 type T1 = `${Num} received`; // 正确
-type T2 = `${Obj} received`; // 报错：Type 'Obj' is not assignable to type 'string | number | bigint | boolean | null | undefined'.
+type T2 = `${Obj} received`; // Type 'Obj' is not assignable to type 'string | number | bigint | boolean | null | undefined'.
 type T3 = `${Obj['n']} received`; // 正确
 ```
 
@@ -511,4 +511,4 @@ type U = '1'|'2';
 type V = `${T}${U}`; // type V = "A1" | "A2" | "B1" | "B2"
 ```
 
-上面示例中，`T` 和 `U` 都是联合类型，各自有两个成员，模板字符串里面引用了这两个类型，最后得到的就是一个 `4` 个成员的联合类型。
+上例中，`T` 和 `U` 都是联合类型，各自有两个成员，模板字符串里面引用了这两个类型，最后得到的就是一个 `4` 个成员的联合类型。
