--- a/14类型断言.md
+++ b/14类型断言.md
@@ -79,7 +79,7 @@ const m:string = n as string; // Conversion of type 'number' to type 'string' ma
 
 类型断言的使用前提是，值的实际类型与断言的类型必须满足一个条件。`expr as T`，`expr` 是实际的值，`T` 是类型断言，它们必须满足下面的条件：`expr` 是 `T` 的子类型，或者 `T` 是 `expr` 的子类型。
 
-也就是说，类型断言要求实际的类型与断言的类型兼容，实际类型可以断言为一个更加宽泛的类型（父类型），也可以断言为一个更加精确的类型（子类型），但不能断言为一个完全无关的类型。
+也就是说，**类型断言要求实际的类型与断言的类型兼容，实际类型可以断言为一个更加宽泛的类型（父类型），也可以断言为一个更加精确的类型（子类型），但不能断言为一个完全无关的类型。**
 
 ```typescript
 const n1 = 1; // const n1: 1，数值类型 1
@@ -89,14 +89,13 @@ const n2:number = 1; // const n2: number，number 类型
 const m2:number = n2 as 1; // 断言为数值类型 1
 ```
 
-但是，如果真的要断言成一个完全无关的类型，也是可以做到的。那就是连续进行两次类型断言，**先断言成 unknown 类型或 any 类型，然后再断言为目标类型。**因为any类型和unknown类型是所有其他类型的父类型，所以可以作为两种完全无关的类型的中介。
+但是，如果真的要断言成一个完全无关的类型，也是可以做到的。那就是连续进行两次类型断言，**先断言成 unknown 类型或 any 类型，然后再断言为目标类型。** 因为 `any` 类型和 `unknown` 类型是所有其他类型的父类型，所以可以作为两种完全无关的类型的中介。
 
 ```typescript
-// 或者写成 <T><unknown>expr
 expr as unknown as T
 ```
 
-上面代码中，`expr` 连续进行了两次类型断言，第一次断言为 `unknown` 类型，第二次断言为 `T` 类型。这样的话，`expr` 就可以断言成任意类型 `T`，而不报错。
+上例中，`expr` 连续进行了两次类型断言，第一次断言为 `unknown` 类型，第二次断言为 `T` 类型。这样的话，`expr` 就可以断言成任意类型 `T`，而不报错。
 
 ```typescript
 const n = 1;
@@ -110,11 +109,8 @@ const m:string = n as unknown as string; // 正确
 **如果没有声明变量类型，let 命令声明的变量，会被类型推断为 TypeScript 内置的基本类型之一；const 命令声明的变量，则被推断为值类型常量。**
 
 ```typescript
-// 类型推断为基本类型 string
-let s1 = 'JavaScript';
-
-// 类型推断为数值类型 “JavaScript”
-const s2 = 'JavaScript';
+let s1 = 'JavaScript'; // let s1: string
+const s2 = 'JavaScript'; // const s2: "JavaScript"
 ```
 
 上例中，变量 `s1` 的类型被推断为 `string`，变量 `s2` 的类型推断为值类型 `JavaScript` 。**后者是前者的子类型，相当于 `const` 命令有更强的限定作用，可以缩小变量的类型范围。**
@@ -150,7 +146,7 @@ let s = 'JavaScript' as const;
 setLang(s);  // 正确
 ```
 
-变量 `s` 虽然是用 `let` 命令声明的，但是使用了 `as const` 断言以后，就等同于是用 `const` 命令声明的，变量s的类型会被推断为*值类型 `"JavaScript"`*。使用了 `as const` 断言以后，`let` 变量就不能再改变值了。
+变量 `s` 虽然是用 `let` 命令声明的，但是使用了 `as const` 断言以后，就等同于是用 `const` 命令声明的，变量 `s` 的类型会被推断为*值类型 `"JavaScript"`*。使用了 `as const` 断言以后，`let` 变量就不能再改变值了。
 
 ```typescript
 let s = 'JavaScript' as const; // let s: "JavaScript"
@@ -166,13 +162,13 @@ let s1 = 'JavaScript';
 let s2 = s1 as const; // A 'const' assertions can only be applied to references to enum members, or string, number, boolean, array, or object literals.'const'断言只能应用于对枚举成员或字符串、数字、布尔值、数组或对象字面值的引用。
 ```
 
-**`as const`也不能用于表达式。**
+**`as const` 也不能用于表达式。**
 
 ```typescript
 let s = ('Java' + 'Script') as const; //  // A 'const' assertions can only be applied to references to enum members, or string, number, boolean, array, or object literals.'const'断言只能应用于对枚举成员或字符串、数字、布尔值、数组或对象字面值的引用。
 ```
 
-**`as const`断言可以用于整个对象，也可以用于对象的单个属性，这时它的类型缩小效果是不一样的。**
+**`as const` 断言可以用于整个对象，也可以用于对象的单个属性，这时它的类型缩小效果是不一样的。**
 
 ```typescript
 const v1 = {
