docs(*): 补充泛型文档

--- a/12泛型.md
+++ b/12泛型.md
@@ -297,3 +297,160 @@ g.add('hello') // Argument of type 'string' is not assignable to parameter of ty
 ```
 
 上例中，依次有两个类型参数 `T` 和 `U`。如果 `T` 是可选参数，`U` 不是，就会报错。
+
+## 3. 数组的泛型表示
+
+```typescript
+let arr:Array<number> = [1, 2, 3];
+```
+
+上例中，`Array<number>` 就是一个泛型，类型参数的值是 `number`，表示该数组的全部成员都是数值。
+
+在 TypeScript 内部，Array是一个泛型接口，类型定义基本是下面的样子。
+
+```typescript
+interface Array<Type> {
+  length: number;
+  pop(): Type|undefined;
+  push(...items:Type[]): number;
+  // ...
+}
+```
+
+上面代码中，`push()` 方法的参数 `item` 的类型是 `Type[]`，跟 `Array()` 的参数类型 `Type` 保持一致，表示只能添加同类型的成员。调用 `push()` 的时候，TypeScript 就会检查两者是否一致。
+
+其他的 TypeScript 内部数据结构，比如 `Map`、`Set` 和 `Promise`，其实也是泛型接口，完整的写法是 `Map<K, V>`、`Set<T>` 和 `Promise<T>`。
+
+TypeScript 默认还提供一个 `ReadonlyArray<T>` 接口，表示只读数组。
+
+```typescript
+function doStuff(values:ReadonlyArray<string>) {
+  values.push('hello!');  // Property 'push' does not exist on type 'readonly string[]'.
+}
+```
+
+上例中，参数 `values` 的类型是 `ReadonlyArray<string>`，表示不能修改这个数组，所以函数体内部新增数组成员就会报错。因此，如果不希望函数内部改动参数数组，就可以将该参数数组声明为 `ReadonlyArray<T>` 类型。
+
+## 4. 类型参数的约束条件
+
+很多类型参数并不是无限制的，对于传入的类型存在约束条件。
+
+```typescript
+function comp<Type>(a:Type, b:Type) {
+  if (a.length >= b.length) {
+    return a;
+  }
+  return b;
+}
+```
+
+上例中，类型参数 `Type` 有一个隐藏的约束条件：它必须存在 `length` 属性。如果不满足这个条件，就会报错。
+
+TypeScript 提供了一种语法，允许在类型参数上面写明约束条件，如果不满足条件，编译时就会报错。这样也可以有良好的语义，对类型参数进行说明。
+
+```typescript
+function comp<T extends { length: number }>(a: T, b: T) {
+  if (a.length >= b.length) {
+    return a;
+  }
+  return b;
+}
+comp([1, 2], [1, 2, 3]) // 正确
+comp('ab', 'abc') // 正确
+comp(1, 2) // 'number'类型的参数不能赋值给'{length: number;}”。
+```
+
+上例中，`T extends { length: number }` 就是约束条件，表示类型参数 `T` 必须满足 `{ length: number }`，否则就会报错。
+
+类型参数的约束条件采用：`<TypeParameter extends ConstraintType>`。`TypeParameter` 表示类型参数，`extends` 是关键字，这是必须的，`ConstraintType` 表示类型参数要满足的条件，即类型参数应该是`ConstraintType` 的子类型。
+
+类型参数可以同时设置约束条件和默认值，前提是默认值必须满足约束条件。
+
+```typescript
+type Fn<A extends string, B extends string = 'world'> =  [A, B];
+type Result = Fn<'hello'>; // type Result = ["hello", "world"]
+type Result2 = Fn<'hello', 'world2'>;  // type Result = ["hello", "world2"]
+```
+
+上例中，类型参数 `A` 和 `B` 都有约束条件，并且 `B` 还有默认值。所以，调用 `Fn` 的时候，可以只给出 `A` 的值，不给出 `B` 的值。
+
+另外，上例也可以看出，泛型本质上是一个类型函数，通过输入参数，获得结果，两者是一一对应关系。
+
+如果有多个类型参数，一个类型参数的约束条件，可以引用其他参数。
+
+```typescript
+<T, U extends T>
+// 或者
+<T extends U, U>
+```
+
+上例中，`U` 的约束条件引用 `T`，或者 `T` 的约束条件引用 `U`，都是正确的。
+
+但是，约束条件不能引用类型参数自身。
+
+```typescript
+<T extends T> // Type parameter 'T' has a circular constraint. 类型参数“T”有一个循环约束。
+<T extends U, U extends T> // Type parameter 'T' has a circular constraint. Type parameter 'U' has a circular constraint.
+```
+
+上例中，`T` 的约束条件不能是 `T` 自身。同理，多个类型参数也不能互相约束（即 `T` 的约束条件是 `U`、`U` 的约束条件是 `T`），因为互相约束就意味着约束条件就是类型参数自身。
+
+## 5. 使用注意点
+
+泛型有一些使用注意点。
+
+- （1）尽量少用泛型。
+
+泛型虽然灵活，但是会加大代码的复杂性，使其变得难读难写。**一般来说，只要使用了泛型，类型声明通常都不太易读，容易写得很复杂。因此，可以不用泛型就不要用。**
+
+- （2）类型参数越少越好。
+
+**多一个类型参数，多一道替换步骤，加大复杂性。因此，类型参数越少越好。**
+
+```typescript
+function filter<T, Fn extends (arg:T) => boolean>(arr:T[], func:Fn): T[] {
+  return arr.filter(func);
+}
+```
+
+上例有两个类型参数，但是第二个类型参数 `Fn` 是不必要的，完全可以直接写在函数参数的类型声明里面。
+
+```typescript
+function filter<T>(arr:T[], func:(arg:T) => boolean): T[] {
+  return arr.filter(func);
+}
+```
+
+上面示例中，类型参数简化成了一个，效果与前一个示例是一样的。
+
+- （3）类型参数需要出现两次。
+
+**如果类型参数在定义后只出现一次，那么很可能是不必要的。**
+
+```typescript
+function greet<Str extends string>(s:Str) {
+  console.log('Hello, ' + s);
+}
+```
+
+上例中，类型参数 `Str` 只在函数声明中出现一次（除了它的定义部分），这往往表明这个类型参数是不必要。
+
+```typescript
+function greet(s:string) {
+  console.log('Hello, ' + s);
+}
+```
+
+上例把前面的类型参数省略了，效果与前一个示例是一样的。**也就是说，只有当类型参数用到两次或两次以上，才是泛型的适用场合。**
+
+- （4）泛型可以嵌套。
+
+类型参数可以是另一个泛型。
+
+```typescript
+type OrNull<Type> = Type|null;
+type OneOrMany<Type> = Type|Type[];
+type OneOrManyOrNull<Type> = OrNull<OneOrMany<Type>>; // OneOrMany<Type> | null  <=>  Type | Type[] | null
+```
+
+上例中，最后一行的泛型 `OrNull` 的类型参数，就是另一个泛型 `OneOrMany`。
