docs(*): 补充对象类型文档

--- a/9对象.md
+++ b/9对象.md
@@ -258,63 +258,74 @@ let w:Person = {
 let r:ReadonlyPerson = w;
 w.age += 1;
 r.age // 43
+r.age = 45; // Cannot assign to 'age' because it is a read-only property.
 ```
 
-上例中，变量w和r指向同一个对象，其中w是可写的，r是只读的。那么，对w的属性修改，会影响到r。
+上例中，变量 `w` 和 `r` 指向同一个对象，其中 `w` 是可写的，`r` 是只读的。那么，对 `w` 的属性修改，会影响到 `r`。
 
-如果希望属性值是只读的，除了声明时加上readonly关键字，还有一种方法，就是在赋值时，在对象后面加上只读断言as const。
+**如果希望属性值是只读的，除了声明时加上 `readonly` 关键字，还有一种方法，就是在赋值时，在对象后面加上只读断言 `as const`。**
 
+```typescript
 const myUser = {
   name: "Sabrina",
 } as const;
+myUser.name = "Cynthia"; // Cannot assign to 'name' because it is a read-only property.
+```
 
-myUser.name = "Cynthia"; // 报错
+上例中，对象后面加了只读断言 `as const`，就变成只读对象了，不能修改属性了。
 
-上面示例中，对象后面加了只读断言as const，就变成只读对象了，不能修改属性了。
+**上面的 `as const` 属于 TypeScript 的类型推断，如果变量明确地声明了类型，那么 TypeScript 会以声明的类型为准。**
 
-注意，上面的as const属于 TypeScript 的类型推断，如果变量明确地声明了类型，那么 TypeScript 会以声明的类型为准。
-
+```typescript
 const myUser:{ name: string } = {
   name: "Sabrina",
 } as const;
-
 myUser.name = "Cynthia"; // 正确
 
-上面示例中，根据变量myUser的类型声明，name不是只读属性，但是赋值时又使用只读断言as const。这时会以声明的类型为准，因为name属性可以修改。
-属性名的索引类型
+const myUser2:{ readonly name: string } = {
+  name: "Sabrina",
+};
+myUser2.name = "Cynthia"; // Cannot assign to 'name' because it is a read-only property.
+```
+
+上例中，根据变量 `myUser` 的类型声明，`name` 不是只读属性，但是赋值时又使用只读断言 `as const`。这时会以声明的类型为准，因为 `name` 属性可以修改。如果类型声明时明确了属性是 `readonly` 的便不可修改.
+
+## 3. 属性名的索引类型
 
 如果对象的属性非常多，一个个声明类型就很麻烦，而且有些时候，无法事前知道对象会有多少属性，比如外部 API 返回的对象。这时 TypeScript 允许采用属性名表达式的写法来描述类型，称为“属性名的索引类型”。
 
 索引类型里面，最常见的就是属性名的字符串索引。
 
+```typescript
 type MyObj = {
   [property: string]: string
 };
-
 const obj:MyObj = {
   foo: 'a',
   bar: 'b',
   baz: 'c',
 };
+```
 
-上面示例中，类型MyObj的属性名类型就采用了表达式形式，写在方括号里面。[property: string]的property表示属性名，这个是可以随便起的，它的类型是string，即属性名类型为string。也就是说，不管这个对象有多少属性，只要属性名为字符串，且属性值也是字符串，就符合这个类型声明。
+上例中，类型 `MyObj` 的属性名类型就采用了表达式形式，写在方括号里面。`[property: string]` 的 `property` 表示属性名，这个是可以随便起的，它的类型是 `string`，即属性名类型为 `string`。也就是说， **不管这个对象有多少属性，只要属性名为字符串，且属性值也是字符串，就符合这个类型声明。**
 
 JavaScript 对象的属性名（即上例的property）的类型有三种可能，除了上例的string，还有number和symbol。
 
+```typescript
 type T1 = {
   [property: number]: string
 };
-
 type T2 = {
   [property: symbol]: string
 };
+```
 
-上面示例中，对象属性名的类型分别为number和symbol。
+上例中，对象属性名的类型分别为 `number` 和 `symbol`。
 
+```typescript
 type MyArr = {
   [n:number]: number;
 };
-
 const arr:MyArr = [1, 2, 3];
 // 或者
 const arr:MyArr = {
@@ -322,68 +333,84 @@ const arr:MyArr = {
   1: 2,
   2: 3,
 };
+```
 
-上面示例中，对象类型MyArr的属性名是[n:number]，就表示它的属性名都是数值，比如0、1、2。
+上例中，对象类型 `MyArr` 的属性名是 `[n:number]`，就表示它的属性名都是数值，比如 0、1、2。
 
-对象可以同时有多种类型的属性名索引，比如同时有数值索引和字符串索引。但是，数值索引不能与字符串索引发生冲突，必须服从后者，这是因为在 JavaScript 语言内部，所有的数值属性名都会自动转为字符串属性名。
+**对象可以同时有多种类型的属性名索引，比如同时有数值索引和字符串索引。但是，数值索引不能与字符串索引发生冲突，必须服从后者，这是因为在 JavaScript 语言内部，所有的数值属性名都会自动转为字符串属性名。**
 
+```typescript
 type MyType = {
-  [x: number]: boolean; // 报错
+  [x: number]: boolean; // 'number' index type 'boolean' is not assignable to 'string' index type 'string'. 'number'索引类型'boolean'不能赋值给'string'索引类型'string'。
   [x: string]: string;
 }
+```
 
-上面示例中，类型MyType同时有两种属性名索引，但是数值索引与字符串索引冲突了，所以报错了。由于字符属性名的值类型是string，数值属性名的值类型只有同样为string，才不会报错。
+上例中，类型 `MyType` 同时有两种属性名索引，但是数值索引与字符串索引冲突了，所以报错了。由于字符属性名的值类型是 `string`，数值属性名的值类型只有同样为 `string`，才不会报错。
 
 同样地，可以既声明属性名索引，也声明具体的单个属性名。如果单个属性名符合属性名索引的范围，两者不能有冲突，否则报错。
 
+```typescript
 type MyType = {
-  foo: boolean; // 报错
+  foo: boolean; // Property 'foo' of type 'boolean' is not assignable to 'string' index type 'string'.
   [x: string]: string;
 }
+```
 
-上面示例中，属性名foo符合属性名的字符串索引，但是两者的属性值类型不一样，所以报错了。
+上例中，属性名 `foo` 符合属性名的字符串索引，但是两者的属性值类型不一样，所以报错了。
 
-属性的索引类型写法，建议谨慎使用，因为属性名的声明太宽泛，约束太少。另外，属性名的数值索引不宜用来声明数组，因为采用这种方式声明数组，就不能使用各种数组方法以及length属性，因为类型里面没有定义这些东西。
+属性的索引类型写法，建议谨慎使用，因为属性名的声明太宽泛，约束太少。 **属性名的数值索引不宜用来声明数组，因为采用这种方式声明数组，就不能使用各种数组方法以及length属性，因为类型里面没有定义这些东西。**
 
+```typescript
 type MyArr = {
   [n:number]: number;
 };
-
 const arr:MyArr = [1, 2, 3];
-arr.length // 报错
+arr.length // Property 'length' does not exist on type 'MyArr'.
+// 改成下面这样就正确
+type MyArr = {
+  [n:string]: number;
+};
+const arr:MyArr = { 0: 1, 1: 2, 2: 3, length: 3};
+arr.length;
+```
 
-上面示例中，读取arr.length属性会报错，因为类型MyArr没有这个属性。
-解构赋值
+上例中，读取 `arr.length` 属性会报错，因为类型 `MyArr` 没有这个属性。
 
-解构赋值用于直接从对象中提取属性。
+## 4. 解构赋值
 
-const {id, name, price} = product;
+**解构赋值用于直接从对象中提取属性。**
 
-上面语句从对象product提取了三个属性，并声明属性名的同名变量。
+`const {id, name, price} = product;` 语句从对象 `product` 提取了三个属性，并声明属性名的同名变量。
 
 解构赋值的类型写法，跟为对象声明类型是一样的。
 
+```typescript
 const {id, name, price}:{
   id: string;
   name: string;
   price: number
 } = product;
+```
 
-注意，目前没法为解构变量指定类型，因为对象解构里面的冒号，JavaScript 指定了其他用途。
+**目前没法为解构变量指定类型，因为对象解构里面的冒号，JavaScript 指定了其他用途。**
 
+```typescript
 let { x: foo, y: bar } = obj;
-
 // 等同于
 let foo = obj.x;
 let bar = obj.y;
+```
 
-上面示例中，冒号不是表示属性x和y的类型，而是为这两个属性指定新的变量名。如果要为x和y指定类型，不得不写成下面这样。
+上例中，冒号不是表示属性 `x` 和 `y` 的类型，而是为这两个属性指定新的变量名。如果要为 `x` 和 `y` 指定类型，不得不写成下面这样。
 
-let { x: foo, y: bar }
-  : { x: string; y: number } = obj;
+```typescript
+let { x: foo, y: bar } : { x: string; y: number } = obj;
+```
 
 这一点要特别小心，TypeScript 里面很容易搞糊涂。
 
+```typescript
 function draw({
   shape: Shape,
   xPos: number = 100,
@@ -392,37 +419,42 @@ function draw({
   let myShape = shape; // 报错
   let x = xPos; // 报错
 }
+```
 
-上面示例中，函数draw()的参数是一个对象解构，里面的冒号很像是为变量指定类型，其实是为对应的属性指定新的变量名。所以，TypeScript 就会解读成，函数体内不存在变量shape，而是属性shape的值被赋值给了变量Shape。
-结构类型原则
+上例中，函数 `draw()` 的参数是一个对象解构，里面的冒号很像是为变量指定类型，其实是为对应的属性指定新的变量名。所以，TypeScript 就会解读成，函数体内不存在变量 `shape`，而是属性 `shape` 的值被赋值给了变量 `Shape`。
 
-只要对象 B 满足 对象 A 的结构特征，TypeScript 就认为对象 B 兼容对象 A 的类型，这称为“结构类型”原则（structural typing）。
+## 5. 结构类型原则
 
+只要对象 `B` 满足对象 `A` 的结构特征，TypeScript 就认为对象 `B` 兼容对象 `A` 的类型，这称为“结构类型”原则（structural typing）。
+
+```typescript
 type A = {
   x: number;
 };
-
 type B = {
   x: number;
   y: number;
 };
+```
 
-上面示例中，对象A只有一个属性x，类型为number。对象B满足这个特征，因此兼容对象A，只要可以使用A的地方，就可以使用B。
+上面示例中，对象 `A` 只有一个属性 `x`，类型为 `number`。对象 `B` 满足这个特征，因此兼容对象 `A`，只要可以使用A的地方，就可以使用 `B`。
 
+```typescript
+type A = {
+  x: number;
+};
 const B = {
   x: 1,
   y: 1
 };
-
-const A:{ x: number } = B; // 正确
-
-上面示例中，A和B并不是同一个类型，但是B可以赋值给A，因为B满足A的结构特征。
+const a:A = B; // 正确
+```
 
 根据“结构类型”原则，TypeScript 检查某个值是否符合指定类型时，并不是检查这个值的类型名（即“名义类型”），而是检查这个值的结构是否符合要求（即“结构类型”）。
 
 TypeScript 之所以这样设计，是为了符合 JavaScript 的行为。JavaScript 并不关心对象是否严格相似，只要某个对象具有所要求的属性，就可以正确运行。
 
-如果类型 B 可以赋值给类型 A，TypeScript 就认为 B 是 A 的子类型（subtyping），A 是 B 的父类型。子类型满足父类型的所有结构特征，同时还具有自己的特征。凡是可以使用父类型的地方，都可以使用子类型，即子类型兼容父类型。
+如果类型 `B` 可以赋值给类型 `A`，TypeScript 就认为 `B` 是 `A` 的子类型（`subtype`），`A` 是 `B` 的父类型。**子类型满足父类型的所有结构特征，同时还具有自己的特征。凡是可以使用父类型的地方，都可以使用子类型，即子类型兼容父类型。**
 
 这种设计有时会导致令人惊讶的结果。
 
