docs(*): 补充对象文档

--- a/9对象.md
+++ b/9对象.md
@@ -458,6 +458,7 @@ TypeScript 之所以这样设计，是为了符合 JavaScript 的行为。JavaSc
 
 这种设计有时会导致令人惊讶的结果。
 
+```typescript
 type myObj = {
   x: number,
   y: number,
@@ -465,165 +466,147 @@ type myObj = {
 
 function getSum(obj:myObj) {
   let sum = 0;
-
   for (const n of Object.keys(obj)) {
-    const v = obj[n]; // 报错
+    const v = obj[n]; // Element implicitly has an 'any' type because expression of type 'string' can't be used to index type 'myObj'. No index signature with a parameter of type 'string' was found on type 'myObj'. 元素隐式具有'any'类型，因为'string'类型的表达式不能用于索引'myObj'类型。在类型'myObj'上找不到带有'string'类型参数的索引签名。
     sum += Math.abs(v);
   }
-
   return sum;
 }
+```
 
-上面示例中，函数getSum()要求传入参数的类型是myObj，但是实际上所有与myObj兼容的对象都可以传入。这会导致const v = obj[n]这一行报错，原因是obj[n]取出的属性值不一定是数值（number），使得变量v的类型被推断为any。如果项目设置为不允许变量类型推断为any，代码就会报错。写成下面这样，就不会报错。
+上例中，函数 `getSum()` 要求传入参数的类型是 `myObj`，但是实际上所有与 `myObj` 兼容的对象都可以传入。这会导致 `const v = obj[n]` 这一行报错，原因是 `obj[n]` 取出的属性值不一定是数值（number），使得变量 `v` 的类型被推断为 `any`。如果项目设置为不允许变量类型推断为 `any`，代码就会报错。写成下面这样，就不会报错。
 
+```typescript
 type MyObj = {
   x: number,
   y: number,
 };
-
 function getSum(obj:MyObj) {
   return Math.abs(obj.x) + Math.abs(obj.y);
 }
+```
 
-上面示例就不会报错，因为函数体内部只使用了属性x和y，这两个属性有明确的类型声明，保证obj.x和obj.y肯定是数值。虽然与MyObj兼容的任何对象都可以传入函数getSum()，但是只要不使用其他属性，就不会有类型报错。
-严格字面量检查
+上例中，因为函数体内部只使用了属性 `x` 和 `y`，这两个属性有明确的类型声明，保证 `obj.x` 和 `obj.y` 肯定是数值。虽然与 `MyObj` 兼容的任何对象都可以传入函数 `getSum()`，但是只要不使用其他属性，就不会有类型报错。
 
-如果对象使用字面量表示，会触发 TypeScript 的严格字面量检查（strict object literal checking）。如果字面量的结构跟类型定义的不一样（比如多出了未定义的属性），就会报错。
+## 6. 严格字面量检查
 
+**如果对象使用字面量表示，会触发 TypeScript 的严格字面量检查（strict object literal checking）。如果字面量的结构跟类型定义的不一样（比如多出了未定义的属性），就会报错。**
+
+```typescript
 const point:{
   x:number;
   y:number;
 } = {
   x: 1,
   y: 1,
-  z: 1 // 报错
+  z: 1 // Type '{ x: number;  y: number;  z: number;  }' is not assignable to type '{ x: number;  y: number;  }'. 
 };
-
-上面示例中，等号右边是一个对象的字面量，这时会触发严格字面量检查。只要有类型声明中不存在的属性（本例是z），就会导致报错。
+```
 
 如果等号右边不是字面量，而是一个变量，根据结构类型原则，是不会报错的。
 
+```typescript
 const myPoint = {
   x: 1,
   y: 1,
   z: 1
 };
-
 const point:{
   x:number;
   y:number;
 } = myPoint; // 正确
+```
 
-上面示例中，等号右边是一个变量，就不会触发严格字面量检查，从而不报错。
+**上例中，等号右边是一个变量，就不会触发严格字面量检查，从而不报错。**
 
 TypeScript 对字面量进行严格检查的目的，主要是防止拼写错误。一般来说，字面量大多数来自手写，容易出现拼写错误，或者误用 API。
 
+```typescript
 type Options = {
   title:string;
   darkMode?:boolean;
 };
-
 const obj:Options = {
   title: '我的网页',
   darkmode: true, // 报错
 };
+```
 
-上面示例中，属性darkMode拼写错了，成了darkmode。如果没有严格字面量规则，就不会报错，因为darkMode是可选属性，根据结构类型原则，任何对象只要有title属性，都认为符合Options类型。
+上例中，属性 `darkMode` 拼写错了，成了 `darkmode`。如果没有严格字面量规则，就不会报错，因为 `darkMode` 是可选属性，根据结构类型原则，任何对象只要有 `title` 属性，都认为符合 `Options` 类型。
 
-规避严格字面量检查，可以使用中间变量。
+**规避严格字面量检查，可以使用中间变量。**
 
+```typescript
 let myOptions = {
   title: '我的网页',
   darkmode: true,
 };
-
 const obj:Options = myOptions;
+```
 
-上面示例中，创建了一个中间变量myOptions，就不会触发严格字面量规则，因为这时变量obj的赋值，不属于直接字面量赋值。
+上例中，创建了一个中间变量 `myOptions`，就不会触发严格字面量规则，因为这时变量 `obj` 的赋值，不属于直接字面量赋值。
 
-如果你确认字面量没有错误，也可以使用类型断言规避严格字面量检查。
+**也可以使用类型断言规避严格字面量检查。**
 
+```typescript
 const obj:Options = {
   title: '我的网页',
   darkmode: true,
 } as Options;
+```
 
-上面示例使用类型断言as Options，告诉编译器，字面量符合 Options 类型，就能规避这条规则。
+上例中，使用类型断言 `as Options`，告诉编译器，字面量符合 `Options` 类型，就能规避这条规则。
 
 如果允许字面量有多余属性，可以像下面这样在类型里面定义一个通用属性。
 
+```typescript
 let x: {
   foo: number,
   [x: string]: any
 };
+x = { foo: 1, baz: 2 };
+```
 
-x = { foo: 1, baz: 2 };  // Ok
-
-上面示例中，变量x的类型声明里面，有一个属性的字符串索引（[x: string]），导致任何字符串属性名都是合法的。
+上例中，变量 `x` 的类型声明里面，有一个属性的字符串索引（`[x: string]`），导致任何字符串属性名都是合法的。
 
 由于严格字面量检查，字面量对象传入函数必须很小心，不能有多余的属性。
 
+```typescript
 interface Point {
   x: number;
   y: number;
 }
-
 function computeDistance(point: Point) { /*...*/ }
-
 computeDistance({ x: 1, y: 2, z: 3 }); // 报错
 computeDistance({x: 1, y: 2}); // 正确
+```
 
-上面示例中，对象字面量传入函数computeDistance()时，不能有多余的属性，否则就通不过严格字面量检查。
-
-编译器选项suppressExcessPropertyErrors，可以关闭多余属性检查。下面是它在 tsconfig.json 文件里面的写法。
-
-{
-  "compilerOptions": {
-    "suppressExcessPropertyErrors": true
-  }
-}
-
-最小可选属性规则
-
-根据“结构类型”原则，如果一个对象的所有属性都是可选的，那么其他对象跟它都是结构类似的。
-
-type Options = {
-  a?:number;
-  b?:number;
-  c?:number;
-};
-
-上面示例中，类型Options的所有属性都是可选的，所以它可以是一个空对象，也就意味着任意对象都满足Options的结构。
+上例中，对象字面量传入函数 `computeDistance()` 时，不能有多余的属性，否则就通不过严格字面量检查。
 
 为了避免这种情况，TypeScript 2.4 引入了一个“最小可选属性规则”，也称为“弱类型检测”（weak type detection）。
 
+```typescript
 type Options = {
   a?:number;
   b?:number;
   c?:number;
 };
-
 const opts = { d: 123 };
-
 const obj:Options = opts; // 报错
+```
 
-上面示例中，对象opts与类型Options没有共同属性，赋值给该类型的变量就会报错。
-
-报错原因是，如果某个类型的所有属性都是可选的，那么该类型的对象必须至少存在一个可选属性，不能所有可选属性都不存在。这就叫做“最小可选属性规则”。
+**如果某个类型的所有属性都是可选的，那么该类型的对象必须至少存在一个可选属性，不能所有可选属性都不存在。这就叫做“最小可选属性规则”。**
 
 如果想规避这条规则，要么在类型里面增加一条索引属性（[propName: string]: someType），要么使用类型断言（opts as Options）。
-空对象
 
-空对象是 TypeScript 的一种特殊值，也是一种特殊类型。
+## 7. 空对象
 
+```typescript
 const obj = {};
 obj.prop = 123; // 报错
+```
 
-上面示例中，变量obj的值是一个空对象，然后对obj.prop赋值就会报错。
-
-原因是这时 TypeScript 会推断变量obj的类型为空对象，实际执行的是下面的代码。
-
-const obj:{} = {};
+上例中，变量 `obj` 的值是一个空对象，然后对 `obj.prop` 赋值就会报错。原因是推断变量 `obj` 的类型为空对象，实际执行的是 `const obj:{} = {};`
 
 空对象没有自定义属性，所以对自定义属性赋值就会报错。空对象只能使用继承的属性，即继承自原型对象Object.prototype的属性。
 
@@ -631,8 +614,9 @@ obj.toString() // 正确
 
 上面示例中，toString()方法是一个继承自原型对象的方法，TypeScript 允许在空对象上使用。
 
-回到本节开始的例子，这种写法其实在 JavaScript 很常见：先声明一个空对象，然后向空对象添加属性。但是，TypeScript 不允许动态添加属性，所以对象不能分步生成，必须生成时一次性声明所有属性。
+这种写法其实在 JavaScript 很常见：先声明一个空对象，然后向空对象添加属性。但是，**TypeScript 不允许动态添加属性，所以对象不能分步生成，必须生成时一次性声明所有属性。**
 
+```typescript
 // 错误
 const pt = {};
 pt.x = 3;
@@ -643,21 +627,24 @@ const pt = {
   x: 3,
   y: 4
 };
+```
 
-如果确实需要分步声明，一个比较好的方法是，使用扩展运算符（...）合成一个新对象。
+如果确实需要分步声明，一个比较好的方法是，使用扩展运算符（`...`）合成一个新对象。
 
+```typescript
 const pt0 = {};
 const pt1 = { x: 3 };
 const pt2 = { y: 4 };
-
 const pt = {
   ...pt0, ...pt1, ...pt2
 };
+```
 
-上面示例中，对象pt是三个部分合成的，这样既可以分步声明，也符合 TypeScript 静态声明的要求。
+上例中，对象 `pt` 是三个部分合成的，这样既可以分步声明，也符合 TypeScript 静态声明的要求。
 
 空对象作为类型，其实是Object类型的简写形式。
 
+```typescript
 let d:{};
 // 等同于
 // let d:Object;
@@ -666,24 +653,27 @@ d = {};
 d = { x: 1 };
 d = 'hello';
 d = 2;
+```
 
-上面示例中，各种类型的值（除了null和undefined）都可以赋值给空对象类型，跟Object类型的行为是一样的。
+上例中，各种类型的值（除了 `null` 和 `undefined`）都可以赋值给空对象类型，跟 `Object` 类型的行为是一样的。
 
-因为Object可以接受各种类型的值，而空对象是Object类型的简写，所以它不会有严格字面量检查，赋值时总是允许多余的属性，只是不能读取这些属性。
+**因为 `Object` 可以接受各种类型的值，而空对象是 `Object` 类型的简写，所以它不会有严格字面量检查，赋值时总是允许多余的属性，只是不能读取这些属性。**
 
+```typescript
 interface Empty { }
 const b:Empty = {myProp: 1, anotherProp: 2}; // 正确
-b.myProp // 报错
+b.myProp // Property 'myProp' does not exist on type 'Empty'.
+```
 
-上面示例中，变量b的类型是空对象，视同Object类型，不会有严格字面量检查，但是读取多余的属性会报错。
+上例中，变量 `b` 的类型是空对象，视同 `Object` 类型，不会有严格字面量检查，但是读取多余的属性会报错。
 
 如果想强制使用没有任何属性的对象，可以采用下面的写法。
 
+```typescript
 interface WithoutProperties {
   [key: string]: never;
 }
+const a:WithoutProperties = { prop: 1 }; // Type 'number' is not assignable to type 'never'.
+```
 
-// 报错
-const a:WithoutProperties = { prop: 1 };
-
-上面的示例中，[key: string]: never表示字符串属性名是不存在的，因此其他对象进行赋值时就会报错。
+上例中，`[key: string]: never` 表示字符串属性名是不存在的，因此其他对象进行赋值时就会报错。
